# PR-Reviewer

./: .gitignore  Makefile  README.md  ROADMAP.md  env.example  pyproject.toml  requirements.txt
agent/: __init__.py  gemini_agent.py  gemini_client.py  mcp_tool_wrapper.py
clients/: __init__.py  asana.py  github.py  slack.py
global_server/: __init__.py  registry.py  server.py
global_server/api_tools/: __init__.py  analytics_tools.py  metadata_tools.py  registry_api.py  search_tools.py  utils.py
mcp_client/: __init__.py  client.py  connection_manager.py  transports.py
servers/: __init__.py
servers/agent_scope_mcp/: __init__.py  main.py
servers/agent_scope_mcp/prompts/: __init__.py  pr_review_prompt.py  versioned_prompt.py
servers/asana_mcp/: __init__.py  main.py
servers/asana_mcp/tools/: __init__.py  create_task.py  find_task.py  list_tasks.py
servers/github_mcp/: __init__.py  main.py
servers/github_mcp/tools/: __init__.py  get_pull_request.py  get_pull_request_comments.py  get_pull_request_diff.py  get_pull_request_files.py  get_pull_request_reviews.py  get_pull_request_status.py  list_pull_requests.py
servers/slack_mcp/: main.py
servers/slack_mcp/tools/: get_channels.py  get_last_messages.py  post_message.py
tests/: test_gemini_agent_e2e.py
tests/agent/: __init__.py  test_gemini_client.py
tests/test_mcp_client_tools/: __init__.py
tests/test_mcp_client_tools/agent_scope/: __init__.py  test_pr_review_prompt.py
tests/test_mcp_client_tools/asana/: __init__.py  test_create_task.py  test_find_task.py  test_list_tasks.py
tests/test_mcp_client_tools/github/: __init__.py  test_get_pull_request.py  test_get_pull_request_diff.py  test_get_pull_request_files.py  test_list_pull_requests.py
tests/test_mcp_client_tools/registry/: __init__.py  test_get_tag_statistics.py  test_get_tool_metadata.py  test_search_tools.py
tests/test_mcp_client_tools/slack/: __init__.py  test_get_channels.py  test_get_last_messages.py  test_post_message.py
utils/: __init__.py  logger.py
