[project]
name = "pr-reviewer"
version = "0.1.0"
description = "Enterprise-grade AI-powered Pull Request reviewer built with Model Context Protocol (MCP)"
authors = [
    { name = "MCP PR Reviewer Team" }
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "pr-review", "asana", "slack", "github", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core MCP Framework
    "fastmcp>=0.1.0",
    "mcp>=1.0.0",
    
    # Asana Integration (PR-1 requirement)
    "asana>=5.0.0",
    
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # HTTP Clients
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # LLM Integration
    "google-generativeai>=0.3.0",
    
    # Observability
    "opik>=0.1.0",
    "structlog>=23.2.0",
    
    # Security & Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-org/pr-reviewer"
Repository = "https://github.com/your-org/pr-reviewer.git"
Documentation = "https://docs.your-org.com/pr-reviewer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["servers"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["--cov=servers", "--cov-report=term-missing"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
